# datajoint-babel

./: README.md  pyproject.toml
datajoint_babel/: constants.py  exceptions.py  model.py  spawn.py
datajoint_babel/model/: __init__.py  attribute.py  table.py
