[tool.poetry]
name = "datajoint-babel"
version = "0.1.0"
description = "Generate schema code from model definitions for both Python and MATLAB"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"
datajoint = "^0.13.4"
parse = "^1.19.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
